--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -56,6 +56,7 @@ rsa==4.7.2
 s3transfer==0.3.6
 serverlessrepo==0.1.10
 six==1.15.0
+testresources==2.0.1
 text-unidecode==1.3
 toml==0.10.2
 tomlkit==0.7.0
