--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -1,11 +1,9 @@
-arrow==1.0.3
 astroid==2.5.2
 attrs==20.3.0
-aws-lambda-builders==1.3.0
+aws-requests-auth==0.4.3
 aws-sam-cli==1.22.0
 aws-sam-translator==1.35.0
 awscli==1.19.47
-binaryornot==0.4.4
 blessed==1.17.6
 boto3==1.17.47
 botocore==1.20.47
@@ -14,22 +12,15 @@ certifi==2020.12.5
 cffi==1.14.5
 chalice==1.22.3
 chardet==3.0.4
-chevron==0.14.0
 click==7.1.2
 colorama==0.4.3
-cookiecutter==1.7.2
 cryptography==3.4.7
-dateparser==0.7.6
 docker==4.2.2
 docutils==0.15.2
-ecdsa==0.14.1
-Flask==1.1.2
 idna==2.10
 inquirer==2.7.0
 isort==5.8.0
-itsdangerous==1.1.0
 Jinja2==2.11.3
-jinja2-time==0.2.0
 jmespath==0.10.0
 jsonschema==3.2.0
 jwcrypto==0.8
@@ -37,34 +28,23 @@ lazy-object-proxy==1.6.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
-pathtools==0.1.2
-poyo==0.5.0
 pyasn1==0.4.8
 pycparser==2.20
 pylint==2.7.4
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 python-editor==1.0.4
-python-jose==3.2.0
-python-slugify==4.0.1
 pytz==2021.1
 PyYAML==5.4.1
 readchar==2.0.1
-regex==2021.4.4
 requests==2.23.0
 rsa==4.7.2
 s3transfer==0.3.6
-serverlessrepo==0.1.10
 six==1.15.0
 testresources==2.0.1
-text-unidecode==1.3
 toml==0.10.2
 tomlkit==0.7.0
-tzlocal==2.1
 urllib3==1.25.11
-watchdog==0.10.3
 wcwidth==0.2.5
-websocket-client==0.58.0
 Werkzeug==1.0.1
 wrapt==1.12.1
-yapf==0.31.0
