--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ deployment/aws-virtual-waiting-room-sample.json
 *egg-info/
 aws_virtual_waiting_room_common*
 deployment/pkg/
+node_modules/
+package-lock.json
+package.json
