--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -10,6 +10,7 @@ botocore==1.20.47
 build==0.6.0.post1
 certifi==2020.12.5
 cffi==1.14.5
+cfn-lint==0.49.0
 chalice==1.22.3
 chardet==3.0.4
 click==7.1.2
