--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -93,27 +93,34 @@ jobs:
   #       cfn-lint-check-job,
   #       cfn-nag-check-job,
   #       hawkeye-check-job,
-  #       pylint-check-job
+  #       pylint-check-job,
+  #       jshint-check-job
   #     ]
-    # use a specific environment for this build that has secrets defined and protection rules in place, if needed
-    # environment: test_install_env
-    # if: github.ref == ${{ env.RELEASE_BRANCH }}
-    # steps:
-    #   - name: Initialize AWS credentials
-    #     uses: aws-actions/configure-aws-credentials@v1
-    #     with:
-    #       aws-access-key-id: ${{ secrets.INSTALL_ACCESS_KEY_ID }}
-    #       aws-secret-access-key: ${{ secrets.INSTALL_SECRET_ACCESS_KEY }}
-    #       aws-region: ${{ env.REGION }}
-    #   - name: Generate version out of commit ID
-    #     run: |
-    #       echo "VERSION=${GITHUB_SHA::7}" >> $GITHUB_ENV
-    #   - name: Create CloudFormation stack based on last job's build
-    #     run: |
-    #       TEMPLATE="https://$DIST_OUTPUT_BUCKET-us-west-2.s3-us-west-2.amazonaws.com/$SOLUTION_NAME/latest/$SOLUTION_NAME-release.template"
-    #       echo $TEMPLATE
-    #       response="$( aws cloudformation create-stack --stack-name MSAM-test-master-$VERSION --template-url $TEMPLATE --region $REGION --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND --disable-rollback )"
-    #       echo $response
+  #   # use a specific environment for this build that has secrets defined and protection rules in place, if needed
+  #   environment: test_install_env
+  #   if: github.ref == ${{ env.RELEASE_BRANCH }}
+  #   steps:
+  #     - name: Configure AWS
+  #       run: |
+  #         sleep 5
+  #         export AWS_ROLE_ARN=${{ secrets.SB_ROLE_ARN }}
+  #         export AWS_WEB_IDENTITY_TOKEN_FILE=/tmp/awscreds
+  #         export AWS_DEFAULT_REGION=${{ env.REGION }}
+
+  #         echo AWS_WEB_IDENTITY_TOKEN_FILE=$AWS_WEB_IDENTITY_TOKEN_FILE >> $GITHUB_ENV
+  #         echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
+  #         echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
+
+  #         curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE
+  #     - name: Generate version out of commit ID
+  #       run: |
+  #         echo "VERSION=${GITHUB_SHA::7}" >> $GITHUB_ENV
+  #     - name: Create CloudFormation stack based on last job's build
+  #       run: |
+  #         TEMPLATE="https://$DIST_OUTPUT_BUCKET-us-west-2.s3-us-west-2.amazonaws.com/$SOLUTION_NAME/latest/$SOLUTION_NAME-release.template"
+  #         echo $TEMPLATE
+  #         response="$( aws cloudformation create-stack --stack-name MSAM-test-master-$VERSION --template-url $TEMPLATE --region $REGION --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND --disable-rollback )"
+  #         echo $response
 
   cfn-lint-check-job:
     needs: scan-build-upload-job
