--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -29,6 +29,7 @@ lazy-object-proxy==1.6.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
+networkx==2.5.1
 pyasn1==0.4.8
 pycparser==2.20
 pylint==2.7.4
