fix syntax error

--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -145,6 +145,7 @@ jobs:
           name: zipped-regional-global-assets
           path: deployment/*.zip
       - name: Store regional assets for deployment
+        uses: actions/upload-artifact@v2
         with:
           name: regional-s3-assets
           path: deployment/regional-s3-assets/*
