--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -17,6 +17,7 @@ on:
 jobs:
   clamav-scan-job:
     runs-on: ubuntu-latest
+    name: Check source code with ClamAV Scan
     steps:
       - name: Check out repo
         uses: actions/checkout@v2
@@ -28,6 +29,7 @@ jobs:
 
   trufflehog-scan-job:
     runs-on: ubuntu-latest
+    name: Check source code with Trufflehog Scan
     steps:
       - name: Check out repo
         uses: actions/checkout@v2
@@ -39,7 +41,7 @@ jobs:
   
   bandit-check-job:
     runs-on: ubuntu-latest
-    name: Check source code with bandit
+    name: Check source code with Bandit
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -50,19 +52,19 @@ jobs:
       - name: Check source with bandit
         run: bandit -r source
 
-  pylint-check-job:
-    runs-on: ubuntu-latest
-    name: Check source code with Pylint
-    steps:
-      # check out repo
-      - name: Checkout
-        uses: actions/checkout@v2
-      # check it with Pylint
-      - name: Check with Pylint
-        run: |
-          pip install pylint
-          cd source
-          ./tools/pylint.sh
+  # pylint-check-job:
+  #   runs-on: ubuntu-latest
+  #   name: Check source code with Pylint
+  #   steps:
+  #     # check out repo
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     # check it with Pylint
+  #     - name: Check with Pylint
+  #       run: |
+  #         pip install pylint
+  #         cd source
+  #         ./tools/pylint.sh
 
   jshint-check-job:
     runs-on: ubuntu-latest
@@ -86,7 +88,7 @@ jobs:
         clamav-scan-job,
         trufflehog-scan-job,
         bandit-check-job,
-        pylint-check-job,
+        # pylint-check-job,
         jshint-check-job
       ]
     environment: push_env
