--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -80,7 +80,7 @@ jobs:
           find . -name '*.js' -type f -print | \
           xargs ../node_modules/jshint/bin/jshint
 
-  build-job:
+  build-and-upload-job:
     runs-on: ubuntu-latest
     # use a specific environment for this build that has secrets defined and protection rules in place, if needed
     needs:
@@ -136,6 +136,18 @@ jobs:
         run: |
           cd deployment
           ./build-s3-dist.sh $DIST_OUTPUT_BUCKET $SOLUTION_NAME $VERSION
+      - name: Run cfn-lint against templates
+        run: |
+          cd deployment/global-s3-assets
+          cfn-lint *.template
+      - name: Run cfn-nag against templates
+        uses: stelligent/cfn_nag@master
+        with:
+          input_path: deployment/global-s3-assets
+      - name: Deploy to S3
+        run: |
+          cd deployment
+          ./deploy.sh -b $DIST_OUTPUT_BUCKET -s $SOLUTION_NAME -v $VERSION -r "$REGIONS_TO_DEPLOY" -a none -t dev
       - name: Zip up regional and global assets
         run: |
           cd deployment
@@ -146,81 +158,84 @@ jobs:
         with:
           name: zipped-regional-global-assets
           path: deployment/*.zip
-      - name: Store regional assets for deployment
-        uses: actions/upload-artifact@v2
-        with:
-          name: regional-s3-assets
-          path: deployment/regional-s3-assets/*
-      - name: Store templates for check jobs and deployment
-        uses: actions/upload-artifact@v2
-        with:
-          name: global-s3-assets
-          path: deployment/global-s3-assets/*.template
-      - name: Store virtual environment requirements
-        uses: actions/upload-artifact@v2
-        with:
-          name: virtual-environment-requirements
-          path: deployment/requirements.txt
+      # - name: Store regional assets for deployment
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: regional-s3-assets
+      #     path: deployment/regional-s3-assets/*
+      # - name: Store templates for check jobs and deployment
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: global-s3-assets
+      #     path: deployment/global-s3-assets/*.template
+      # - name: Store virtual environment requirements
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: virtual-environment-requirements
+      #     path: deployment/requirements.txt
 
-  cfn-lint-check-job:
-    needs: build-job
-    runs-on: ubuntu-latest
-    name: Check templates with cfn-lint
-    steps:
-      - name: Download build templates
-        uses: actions/download-artifact@v2
-        with:
-          name: global-s3-assets
-      - name: Check with cfn-lint
-        run: |
-          pip install cfn-lint
-          cfn-lint *.template
+  # cfn-lint-check-job:
+  #   needs: build-job
+  #   runs-on: ubuntu-latest
+  #   name: Check templates with cfn-lint
+  #   steps:
+  #     - name: Download build templates
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: global-s3-assets
+  #     - name: Check with cfn-lint
+  #       run: |
+  #         pip install cfn-lint
   
-  cfn-nag-check-job:
-    needs: build-job
-    runs-on: ubuntu-latest
-    name: Check templates with cfn-nag
-    steps:
-      - name: Download build templates
-        uses: actions/download-artifact@v2
-        with:
-          name: global-s3-assets
-      - name: Check with cfn-nag
-        uses: stelligent/cfn_nag@master
+  # cfn-nag-check-job:
+  #   needs: build-job
+  #   runs-on: ubuntu-latest
+  #   name: Check templates with cfn-nag
+  #   steps:
+  #     - name: Download build templates
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: global-s3-assets
+  #     - name: Check with cfn-nag
+  #       uses: stelligent/cfn_nag@master
 
-  deploy-job:
-    needs: 
-      [
-        cfn-lint-check-job,
-        cfn-nag-check-job
-      ]
-    runs-on: ubuntu-latest
-    name: Deploy to S3
-    environment: push_env
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-      - name: Configure AWS
-        run: |
-          sleep 5
-          export AWS_ROLE_ARN=${{ secrets.VWR_ROLE_ARN }}
-          export AWS_WEB_IDENTITY_TOKEN_FILE=/tmp/awscreds
-          export AWS_DEFAULT_REGION=${{ env.REGION }}
+  # deploy-job:
+  #   needs: 
+  #     [
+  #       cfn-lint-check-job,
+  #       cfn-nag-check-job
+  #     ]
+  #   runs-on: ubuntu-latest
+  #   name: Deploy to S3
+  #   environment: push_env
+  #   permissions:
+  #     id-token: write
+  #     contents: read
+  #   steps:
+  #     - name: Configure AWS
+  #       run: |
+  #         sleep 5
+  #         export AWS_ROLE_ARN=${{ secrets.VWR_ROLE_ARN }}
+  #         export AWS_WEB_IDENTITY_TOKEN_FILE=/tmp/awscreds
+  #         export AWS_DEFAULT_REGION=${{ env.REGION }}
 
-          echo AWS_WEB_IDENTITY_TOKEN_FILE=$AWS_WEB_IDENTITY_TOKEN_FILE >> $GITHUB_ENV
-          echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
-          echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
+  #         echo AWS_WEB_IDENTITY_TOKEN_FILE=$AWS_WEB_IDENTITY_TOKEN_FILE >> $GITHUB_ENV
+  #         echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
+  #         echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
 
-          curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE
-      - name: Download build templates
-        uses: actions/download-artifact@v2
-        with:
-          name: cloudformation-templates
-      - name: Deploy to S3
-        run: |
-          cd deployment
-          ./deploy.sh -b $DIST_OUTPUT_BUCKET -s $SOLUTION_NAME -v $VERSION -r "$REGIONS_TO_DEPLOY" -a none -t dev
+  #         curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE
+  #     - name: Download global assets
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: global-s3-assets
+  #     - name: Download regional assets
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: regional-s3-assets
+  #     - name: Deploy to S3
+  #       run: |
+  #         cd deployment
+  #         ./deploy.sh -b $DIST_OUTPUT_BUCKET -s $SOLUTION_NAME -v $VERSION -r "$REGIONS_TO_DEPLOY" -a none -t dev
 
 
   # main-branch-deploy-cfn:
