--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -95,9 +95,7 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v2
       - name: Set up Push variables
-        if: github.event_name == 'push'
-        run: |
-          echo "VERSION=`git rev-parse --short HEAD`" >> $GITHUB_ENV
+        run: echo "VERSION=`git rev-parse --short HEAD`" >> $GITHUB_ENV
       - name: Update system path
         run: echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Set up AWS environment 
@@ -126,6 +124,10 @@ jobs:
         with:
           path: deployment/
           key: ${{ github.sha }}
+      # - name: Run unit tests
+      #   run: |
+      #     cd deployment
+      #     ./run-unit-tests.sh
       - name: Run build script
         run: |
           cd deployment
@@ -194,7 +196,8 @@ jobs:
           echo AWS_WEB_IDENTITY_TOKEN_FILE=$AWS_WEB_IDENTITY_TOKEN_FILE >> $GITHUB_ENV
           echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
           echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
-
+          echo "VERSION=`git rev-parse --short HEAD`" >> $GITHUB_ENV
+          
           curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE
       - name: Restore deployment directory from cache
         uses: actions/cache@v2
