--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -79,7 +79,7 @@ jobs:
           xargs ../node_modules/jshint/bin/jshint
 
   build-job:
-    name: Build assets
+    name: Run build script
     runs-on: ubuntu-latest
     needs:
       [
@@ -175,20 +175,20 @@ jobs:
 
   upload-and-store-job:
     name: Upload and store regional and global assets
-    runs-on: ubuntu-latest
-    environment: push_env
-    permissions:
-      id-token: write
-      contents: read
     needs:
       [
         cfn-lint-job,
         cfn-nag-job        
       ]
+    runs-on: ubuntu-latest
+    environment: push_env
+    permissions:
+      id-token: write
+      contents: read
     steps:
+      - run: sleep 5 # per doc there is still some kind of race condition
       - name: Configure AWS
         run: |
-          sleep 5
           export AWS_ROLE_ARN=${{ secrets.VWR_ROLE_ARN }}
           export AWS_WEB_IDENTITY_TOKEN_FILE=/tmp/awscreds
           export AWS_DEFAULT_REGION=${{ env.REGION }}
