--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -15,6 +15,7 @@ chalice==1.22.3
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
+crhelper==2.0.10
 cryptography==3.4.7
 docker==4.2.2
 docutils==0.15.2
@@ -38,6 +39,7 @@ python-editor==1.0.4
 pytz==2021.1
 PyYAML==5.4.1
 readchar==2.0.1
+redis==3.5.3
 requests==2.23.0
 rsa==4.7.2
 s3transfer==0.3.6
