--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -66,14 +66,16 @@ jobs:
 
   pa11y-check-job:
     runs-on: ubuntu-latest
-    name: Check HTML code with pa11y for accessibility
+    name: Check HTML code with Pa11y for accessibility
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Install pa11y
+      - name: Install Pa11y
         run: npm install pa11y
-      - name: Check with pa11y
-        run: find source -iname '*.html' -exec node_modules/pa11y/bin/pa11y.js {} \;
+      - name: Check with Pa11y
+        run: |
+          cd source
+          find . -iname '*.html' -exec ../node_modules/pa11y/bin/pa11y.js {} \;
 
   jshint-check-job:
     runs-on: ubuntu-latest
