--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -246,5 +246,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo "Run ID: " {{ github.run_id }}
-          curl -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/$SOLUTION_ORG/$SOLUTION_NAME/actions/runs/{{ github.run_id }}/artifacts
+          echo "Run ID:  ${{ github.run_id }}"
+          curl -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/$SOLUTION_ORG/$SOLUTION_NAME/actions/runs/${{ github.run_id }}/artifacts"
