--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -247,4 +247,4 @@ jobs:
     steps:
       - run: |
           echo "Run ID:  ${{ github.run_id }}"
-          curl -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/$SOLUTION_ORG/$SOLUTION_NAME/actions/runs/${{ github.run_id }}/artifacts"
+          curl -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{ env.SOLUTION_ORG }}/${{ env.SOLUTION_NAME }}/actions/runs/${{ github.run_id }}/artifacts
