--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -203,6 +203,14 @@ jobs:
     steps:
       - name: Check out repo
         uses: actions/checkout@v2
+      - name: Install required system packages
+        run: |
+          pip install --upgrade --force-reinstall -r deployment/requirements.txt 2> error.txt
+          if [ -s error.txt ]; then
+            echo "ERROR: System package installation failed."
+            cat error.txt
+            exit 1
+          fi
       - run: sleep 5 # per doc there is still some kind of race condition
       - name: Configure AWS
         run: |
@@ -244,7 +252,30 @@ jobs:
         upload-and-store-job
       ]
     runs-on: ubuntu-latest
+    environment: notify_env
+    permissions:
+      id-token: write
+      contents: read
     steps:
-      - run: |
-          echo "Run ID:  ${{ github.run_id }}"
-          curl -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{ env.SOLUTION_ORG }}/${{ env.SOLUTION_NAME }}/actions/runs/${{ github.run_id }}/artifacts
+      - name: Check out repo
+        uses: actions/checkout@v2
+      - run: sleep 5 # per doc there is still some kind of race condition
+      - name: Configure AWS
+        run: |
+          export AWS_ROLE_ARN=${{ secrets.NOTIFY_ROLE }}
+          export AWS_WEB_IDENTITY_TOKEN_FILE=/tmp/awscreds
+          export AWS_DEFAULT_REGION=${{ env.REGION }}
+          export NOTIFICATION_ENDPOINT=${{ secrets.ENDPOINT }}
+
+          echo AWS_WEB_IDENTITY_TOKEN_FILE=$AWS_WEB_IDENTITY_TOKEN_FILE >> $GITHUB_ENV
+          echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
+          echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
+          echo NOTIFICATION_ENDPOINT=$NOTIFICATION_ENDPOINT >> $GITHUB_ENV
+          echo "VERSION=`git rev-parse --short HEAD`" >> $GITHUB_ENV
+          echo "PAYLOAD="{\"stuff\":\"blaah\"}" >> $GITHUB_ENV
+          
+          curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE
+      - name: Invoke endpoint
+        run: |
+          cd deployment
+          python end-workflow-notification.py
