--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -266,13 +266,13 @@ jobs:
           export AWS_WEB_IDENTITY_TOKEN_FILE=/tmp/awscreds
           export AWS_DEFAULT_REGION=${{ env.REGION }}
           export NOTIFICATION_ENDPOINT=${{ secrets.ENDPOINT }}
-
+          export PAYLOAD="{\"stuff\":\"blaah\"}"
+          
           echo AWS_WEB_IDENTITY_TOKEN_FILE=$AWS_WEB_IDENTITY_TOKEN_FILE >> $GITHUB_ENV
           echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
           echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
           echo NOTIFICATION_ENDPOINT=$NOTIFICATION_ENDPOINT >> $GITHUB_ENV
-          echo "VERSION=`git rev-parse --short HEAD`" >> $GITHUB_ENV
-          echo "PAYLOAD="{\"stuff\":\"blaah\"}" >> $GITHUB_ENV
+          echo PAYLOAD=$PAYLOAD >> $GITHUB_ENV
           
           curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE
       - name: Invoke endpoint
