--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -259,6 +259,14 @@ jobs:
     steps:
       - name: Check out repo
         uses: actions/checkout@v2
+      - name: Install required system packages
+        run: |
+          pip install --upgrade --force-reinstall -r deployment/requirements.txt 2> error.txt
+          if [ -s error.txt ]; then
+            echo "ERROR: System package installation failed."
+            cat error.txt
+            exit 1
+          fi
       - run: sleep 5 # per doc there is still some kind of race condition
       - name: Configure AWS
         run: |
@@ -267,14 +275,14 @@ jobs:
           export AWS_DEFAULT_REGION=${{ env.REGION }}
           export NOTIFICATION_ENDPOINT=${{ secrets.ENDPOINT }}
           export PAYLOAD="{\"stuff\":\"blaah\"}"
-          
+
           echo AWS_WEB_IDENTITY_TOKEN_FILE=$AWS_WEB_IDENTITY_TOKEN_FILE >> $GITHUB_ENV
           echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
           echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
           echo NOTIFICATION_ENDPOINT=$NOTIFICATION_ENDPOINT >> $GITHUB_ENV
           echo PAYLOAD=$PAYLOAD >> $GITHUB_ENV
           
-          curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE
+          curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE      
       - name: Invoke endpoint
         run: |
           cd deployment
