--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -15,7 +15,7 @@ jobs:
       id-token: write
       contents: read
       actions: read
-    # if: ${{ github.event.workflow_run.conclusion == 'success' }}    
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}    
     steps:
       - name: Checkout
         uses: actions/checkout@v2
